Fixed z-index display error in modal overlay.

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -80,17 +80,8 @@ body {
 
 
 // Modal Layout
-.modal {
-  position: fixed;
-  left: 25%;
-  right: auto;
-  top: 25%;
-  width: 50%;
-  margin: 0 auto;
-  border: 1px solid red; 
-  background: #fff;
-  z-index: 667;
-  padding: 2em;
+dialog {
+  display: block;
 }
 .modal-overlay {
   position: fixed;
@@ -98,7 +89,14 @@ body {
   bottom: 0;
   right: 0;
   left: 0;
-  background: #000;
-  opacity: .6;
   z-index: 666;
+}
+.modal {
+  position: fixed;
+  left: 25%;
+  right: auto;
+  top: 15%;
+  width: 50%;
+  background: #fff;
+  z-index: 667;
 }
